<resources>
    <string name="app_name">OSBApplication</string>

    <string name="om">Om</string>
    <string name="saravana_bhavan">SARAVANA BHAVAN</string>
    <string name="pure_vegetarian">Pure Vegetarian</string>
    <string name="taste_of_home">Taste\nof\nHome</string>

    <string name="welcome">Welcome back</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

    <string name="enter_email_address">Enter the email address</string>
    <string name="enter_password">Enter the password</string>

    <string name="labours">Labours</string>
    <string name="employees">Employees</string>
    <string name="bonus">Bonus</string>
    <string name="attendance">Attendance</string>

    <string name="total">Total</string>
    <string name="men">Men</string>
    <string name="women">Women</string>

    <string name="category">Category</string>
    <string name="select_the_category">Select the employee category</string>
    <string name="employee_name">Employee name</string>
    <string name="enter_the_employee_name">Enter the employee name</string>
    <string name="salary_per_day">Salary / Day</string>
    <string name="enter_the_salary">Enter the salary</string>
    <string name="date_of_join">Date of joining</string>
    <string name="select_the_date_of_join">Select the date of joining</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="asterick">*</string>
    <string name="dashed">--</string>
    <string name="working_from">Working from</string>
    <string name="per_day">/ day</string>


    <!--Content Description-->
    <string name="home_page_header_image">Home page header image</string>
    <string name="home_page_cook_image">Home page cook image</string>
    <string name="emp_page_cook_image">Employee page image</string>
    <string name="add_button">Add button</string>
    <string name="rupee_image">Rupee image</string>
    <string name="profile_image">Profile image</string>


    <string-array name="categoryArray">
        <item >Waiter</item>
        <item >Cleaner</item>
        <item >Main master</item>
        <item >Dosa master</item>
        <item >Dish wash cleaner</item>
        <item >Hall staff</item>
    </string-array>

</resources>