<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="com.example.osbapplication.homePage.HomePageViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".homePage.HomePageActivity"
        android:background="@color/app_color_dark">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:id="@+id/rl_home_top_view_holder"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:elevation="10dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/app_color_light_bottom_round">

                    <RelativeLayout
                        android:id="@+id/rl_home_header_holder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:layout_marginTop="15dp">

                        <ImageView
                            android:id="@+id/iv_home_page_header_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_alignParentStart="true"
                            android:contentDescription="@string/home_page_header_image"
                            android:src="@drawable/food_bowl_closed"/>

                        <TextView
                            android:id="@+id/tv_header_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:layout_marginStart="5dp"
                            android:layout_toEndOf="@id/iv_home_page_header_icon"
                            style="@style/home_heading_sac_24_app_dark"
                            android:text="@string/om"/>

                        <TextView
                            android:id="@+id/tv_header_text_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            style="@style/home_heading_16_app_dark"
                            android:layout_toEndOf="@id/iv_home_page_header_icon"
                            android:layout_below="@+id/tv_header_text"
                            android:text="@string/saravana_bhavan"/>


                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginVertical="25dp"
                        android:layout_marginHorizontal="5dp"
                        android:gravity="center"
                        android:layout_below="@id/rl_home_header_holder">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:padding="2dp"
                            android:contentDescription="@string/home_page_cook_image"
                            android:src="@drawable/boy_cook"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="2dp"
                            android:text="@string/taste_of_home"
                            style="@style/home_heading_sac_36_black"/>

                    </LinearLayout>



                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/app_color_dark"
                    android:orientation="vertical"
                    android:layout_marginTop="8dp"
                    android:layout_below="@id/rl_home_top_view_holder">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/labours"
                        style="@style/body_header_14_black"
                        android:layout_marginTop="5dp"
                        android:layout_marginHorizontal="15dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="8dp"
                        android:layout_marginHorizontal="15dp"
                        android:orientation="horizontal"
                        android:layout_gravity="center_vertical"
                        android:padding="5dp"
                        android:background="@drawable/white_color_round"
                        android:elevation="5dp">


                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="3"
                            android:padding="5dp"
                            android:layout_height="wrap_content"
                            android:onClick="@{viewModel::onEmployees}"
                            style="@style/body_regular_12_black"
                            android:text="@string/employees"
                            app:drawableTopCompat="@drawable/members" />


                        <View
                            android:layout_width="1dp"
                            android:background="@color/grey_out"
                            android:layout_marginVertical="5dp"
                            android:layout_marginHorizontal="2dp"
                            android:layout_height="match_parent"/>


                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="3"
                            android:padding="5dp"
                            android:layout_height="wrap_content"
                            style="@style/body_regular_12_black"
                            android:text="@string/bonus"
                            app:drawableTopCompat="@drawable/bonus" />

                        <View
                            android:layout_width="1dp"
                            android:background="@color/grey_out"
                            android:layout_marginVertical="5dp"
                            android:layout_marginHorizontal="2dp"
                            android:layout_height="match_parent"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:padding="5dp"
                            style="@style/body_regular_12_black"
                            android:text="@string/attendance"
                            app:drawableTopCompat="@drawable/attendance" />

                    </LinearLayout>


                </LinearLayout>

            </RelativeLayout>


        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>