<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="com.example.osbapplication.loginPage.LoginViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".loginPage.LoginActivity">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/app_color_light">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/rl_login_header_holder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    android:padding="5dp"
                    android:background="@color/app_color_dark">

                    <TextView
                        android:id="@+id/tv_header_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="85dp"
                        android:layout_marginStart="20dp"
                        style="@style/heading_sac_36_white"
                        android:text="@string/om"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/login_page_leaf"
                        android:layout_alignTop="@+id/tv_header_text"
                        android:layout_alignEnd="@+id/tv_header_text_name"
                        android:layout_above="@id/tv_header_text_name"
                        android:layout_marginEnd="5dp"
                        />

                    <TextView
                        android:id="@+id/tv_header_text_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_marginStart="20dp"
                        style="@style/heading_24_white"
                        android:layout_below="@+id/tv_header_text"
                        android:text="@string/saravana_bhavan"/>

                    <LinearLayout
                        android:id="@+id/ll_name_holder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="85dp"
                        android:layout_below="@id/tv_header_text_name"
                        android:layout_alignStart="@id/tv_header_text_name"
                        android:layout_alignEnd="@id/tv_header_text_name"
                        android:orientation="horizontal">

                        <View
                            android:layout_width="0dp"
                            android:layout_height="3dp"
                            android:layout_weight="1"
                            android:layout_gravity="center_vertical"
                            android:background="@color/app_color_highlighter"/>

                        <TextView
                            android:id="@+id/tv_sub_header_text_name"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:layout_gravity="center_vertical"
                            android:text="@string/pure_vegetarian"
                            style="@style/sub_heading_14_highlight"/>

                        <View
                            android:layout_width="0dp"
                            android:layout_height="3dp"
                            android:layout_weight="1"
                            android:layout_gravity="center_vertical"
                            android:background="@color/app_color_highlighter"/>

                    </LinearLayout>


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rl_login_header_holder">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_alignParentTop="true"
                        android:background="@color/app_color_dark"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="5dp"
                        android:background="@drawable/app_color_light_top_round">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="40dp"
                            android:layout_marginStart="20dp"
                            android:text="@string/welcome"
                            style="@style/heading_16_black"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="25dp"
                            android:layout_marginStart="25dp"
                            android:text="@string/email_address"
                            style="@style/input_header_12_black"/>

                        <RelativeLayout
                            android:id="@+id/ll_email_address"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_marginTop="2dp"
                            android:layout_marginHorizontal="20dp"
                            android:gravity="center_vertical"
                            android:background="@drawable/grey_stroke_round_shape">

                            <EditText
                                android:id="@+id/et_email_address"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="8dp"
                                android:background="@android:color/transparent"
                                android:layout_gravity="center_vertical"
                                android:hint="@string/enter_email_address"
                                android:textColorHint="@color/grey_out"
                                style="@style/input_hint_tv_style"/>

                        </RelativeLayout>



                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:layout_marginStart="25dp"
                            android:text="@string/password"
                            style="@style/input_header_12_black"/>

                        <RelativeLayout
                            android:id="@+id/ll_password"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_marginTop="2dp"
                            android:layout_marginHorizontal="20dp"
                            android:gravity="center_vertical"
                            android:background="@drawable/grey_stroke_round_shape">

                            <EditText
                                android:id="@+id/et_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="8dp"
                                android:background="@android:color/transparent"
                                android:layout_gravity="center_vertical"
                                android:hint="@string/enter_password"
                                android:inputType="textPassword"
                                android:textColorHint="@color/grey_out"
                                style="@style/input_hint_tv_style"/>

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_marginHorizontal="20dp"
                            android:layout_marginVertical="30dp"
                            android:background="@drawable/app_color_black_round">

                            <Button
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/login"
                                android:onClick="@{viewModel::onLogin}"
                                android:backgroundTint="@color/app_color_black"
                                style="@style/main_button_tv_style"/>


                        </RelativeLayout>





                    </LinearLayout>



                </RelativeLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
